--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 Django = "^5.0.2"
+environ = "^1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
