--- a/afone_web/pyproject.toml
+++ b/afone_web/pyproject.toml
@@ -9,8 +9,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 Django = "^5.0.2"
-environ = "^1.0"
 psycopg2 = "^2.9.9"
+django-environ = "^0.11.2"
+gunicorn = "^21.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
