--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -6,12 +6,12 @@ http {
         server_name localhost;
 
         location / {
-            proxy_pass http://django_back_afone:8000;
+            proxy_pass http://afone_web:8000;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
             proxy_redirect off;
             if (!-f $request_filename) {
-                proxy_pass http://django_back_afone:8000;
+                proxy_pass http://afone_web:8000;
                 break;
             }
         }
