--- a/afone_web/docker/env/.dev.env
+++ b/afone_web/docker/env/.dev.env
@@ -1,6 +1,6 @@
 SECRET_KEY="django-insecure-^qzwsde3*3*iq&54@cdodw(+z*i9d^#4a3vi6xe3bq7fw0"
 
-DEBUG=1
+DEBUG=True
 
 ALLOWED_HOSTS=127.0.0.1 localhost 0.0.0.0
 
