--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,10 +8,16 @@ services:
       - ./afone_web/docker/env/.dev.env
     ports:
       - "5433:5432"
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+    networks:
+      - afone-network
 
   django_back_afone:
     build:
       context: ./afone_web
+    container_name: afone_django
+    restart: always
     ports:
       - "8000:8000"
     depends_on:
@@ -20,70 +26,27 @@ services:
       - ./afone_web/docker/env/.dev.env
     volumes:
       - static_volume:/app/static
+      - ./afone_web:/app
+    networks:
+      - afone-network
 
   nginx:
     image: nginx:latest
+    container_name: afone_nginx
     volumes:
       - ./conf/nginx.conf:/etc/nginx/nginx.conf
       - static_volume:/static
     ports:
-      - "80:80"
+      - "8080:80"
     depends_on:
       - django_back_afone
+    networks:
+      - afone-network
 
 volumes:
+  pg_data:
   static_volume:
 
-#volumes:
-#  pgdata:
-#  static:
-#  media:
-#
-#services:
-#
-#  django_back_afone:
-#    build:
-#      context: ..
-#    ports:
-#      - "8000:8000"
-#    container_name: django_back_afone
-#    env_file:
-#      - docker/env/.dev.env
-#    volumes:
-#      - ./:/afone_music_website
-#      - static:/afone_music_website/static
-#      - media:/afone_music_website/media
-#    depends_on:
-#      - db_postgres
-#    command: sh -c "python manage.py collectstatic --no-input &&
-#                    python manage.py runserver 0.0.0.0:8000"
-#
-#  nginx:
-#    container_name: nginx
-#    working_dir: /afone_music_website
-#    image: nginx:stable-alpine
-#    restart: always
-#    ports:
-#      - "8080:80"
-#    volumes:
-#      - static:/afone_music_website/static
-#      - media:/afone_music_website/media
-#      - ./docker/nginx/dev/:/etc/nginx/conf.d:ro
-#    links:
-#      - django_back_afone
-#    depends_on:
-#      - django_back_afone
-#
-#  db_postgres:
-#    image: postgres:alpine
-#    container_name: db_postgres
-#    restart: always
-#    env_file:
-#      - docker/env/.dev.env
-#    volumes:
-#      - pgdata:/var/lib/postgresql/data/
-#    healthcheck:
-#      test: [ "CMD-SHELL", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB" ]
-#      interval: 10s
-#      timeout: 30s
-#      retries: 5
+networks:
+  afone-network:
+    driver: bridge
