--- a/afone_web/docker/env/.dev.env
+++ b/afone_web/docker/env/.dev.env
@@ -9,5 +9,5 @@ CSRF_TRUSTED_ORIGINS=http://127.0.0.1 http://localhost
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=postgres-db
-POSTGRES_PORT=5432
+POSTGRES_HOST=172.17.0.1
+POSTGRES_PORT=5433
